--- a/index.html
+++ b/index.html
@@ -1,32 +1,100 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Coordenadas</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
-        import { getFirestore, collection, addDoc, getDoc, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-firestore.js";
-
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyBYtnGs_6EtsDmFcg_fsQDfr51bwMlYQp8",
-            authDomain: "mapsite-3ca1a.firebaseapp.com",
-            projectId: "mapsite-3ca1a",
-            storageBucket: "mapsite-3ca1a.appspot.com",
-            messagingSenderId: "594377703312",
-            appId: "1:594377703312:web:6eee3d64cc46affabe3d15",
-            measurementId: "G-TG8FMX0SXC"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
     <style>
-        /* Estilos omitidos para brevedad */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+            background-color: #f44336; /* Rojo */
+        }
+
+        h1 {
+            color: white;
+            font-family: 'Comic Sans MS', cursive, sans-serif; /* Fuente Comic */
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            margin: 10px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+        }
+
+        .buscar {
+            background-color: #FF9800; /* Naranja */
+            color: white;
+        }
+
+        .ingresar {
+            background-color: #2196F3; /* Azul */
+            color: white;
+        }
+
+        #mapButton {
+            background-color: #4CAF50; /* Verde */
+            color: white;
+            display: none; /* Oculto inicialmente */
+        }
+
+        #searchContainer, #nuevoSiteContainer, #eliminarContainer, #excelContainer {
+            display: none; /* Oculto inicialmente */
+            margin-top: 20px;
+        }
+
+        #searchInput, #nuevaCadena, #siteAEliminar {
+            padding: 10px;
+            font-size: 16px;
+            width: 200px;
+            border: 2px solid #ccc;
+            border-radius: 5px;
+        }
+
+        #searchButton, #eliminarButton, #refreshButton {
+            padding: 10px 20px;
+            font-size: 16px;
+            margin-left: 10px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+        }
+
+        #searchButton {
+            background-color: #4CAF50; /* Verde para buscar */
+            color: white;
+        }
+
+        #result {
+            margin-top: 20px;
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        #loadButton {
+            background-color: #2196F3; /* Azul */
+            color: white;
+        }
+
+        #refreshButton {
+            background-color: #FFEB3B; /* Amarillo */
+            color: #2196F3; /* Azul */
+            display: none; /* Oculto inicialmente */
+        }
+
+        #successMessage {
+            margin-top: 20px;
+            color: white;
+            font-size: 18px;
+            display: none; /* Oculto inicialmente */
+        }
     </style>
 </head>
 <body>
@@ -63,38 +131,60 @@
         <button id="loadButton" onclick="procesarExcel()">Cargar</button>
     </div>
 
-    <div id="loadingMessage">Cargando...</div>
     <div id="successMessage">Carga exitosa de datos desde el archivo WRITE.</div>
     <button id="refreshButton" onclick="refreshPage()">Refrescar</button>
 
     <script>
-        async function buscarCoordenadas() {
-            const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase(); // Convertir a mayúsculas
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyBYtnGs_6EtsDmFcg_fsQDfr51bwMlYQp8",
+            authDomain: "mapsite-3ca1a.firebaseapp.com",
+            projectId: "mapsite-3ca1a",
+            storageBucket: "mapsite-3ca1a.appspot.com",
+            messagingSenderId: "594377703312",
+            appId: "1:594377703312:web:6eee3d64cc46affabe3d15",
+            measurementId: "G-TG8FMX0SXC"
+        };
+
+        // Inicializar Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
+        function mostrarBarraBusqueda() {
+            document.getElementById("searchContainer").style.display = "block";
+        }
+
+        function mostrarFormularioIngresar() {
+            document.getElementById("nuevoSiteContainer").style.display = "block";
+        }
+
+        // Buscar coordenadas desde Firebase
+        function buscarCoordenadas() {
+            const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase();
 
             if (cadenaAlfanumerica.length === 0) {
                 alert("Por favor, ingrese una cadena alfanumérica.");
                 return;
             }
 
-            const docRef = doc(db, "sites/emplazamiento", cadenaAlfanumerica);
-            const docSnap = await getDoc(docRef);
-
-            if (docSnap.exists()) {
-                const data = docSnap.data();
-                const coordenadas = data.coordenadas;
-                document.getElementById("result").textContent = `Coordenadas encontradas: ${coordenadas}`;
-
-                document.getElementById("mapButton").style.display = "inline-block";
-                document.getElementById("eliminarContainer").style.display = "none"; // Ocultar contenedor de eliminar
-            } else {
-                document.getElementById("result").textContent = 'Coordenadas no encontradas';
-                document.getElementById("mapButton").style.display = "none"; // Ocultar botón de mapa si no se encuentra
-                document.getElementById("eliminarContainer").style.display = "none"; // Ocultar contenedor de eliminar
-            }
+            const siteRef = firebase.database().ref('datos/emplazamiento/' + cadenaAlfanumerica);
+            siteRef.once('value').then((snapshot) => {
+                if (snapshot.exists()) {
+                    const coordenadas = snapshot.val().coordenadas;
+                    document.getElementById("result").textContent = `Coordenadas encontradas: ${coordenadas}`;
+                    document.getElementById("mapButton").style.display = "inline-block";
+                } else {
+                    document.getElementById("result").textContent = 'Coordenadas no encontradas';
+                    document.getElementById("mapButton").style.display = "none";
+                }
+            }).catch((error) => {
+                alert("Error al buscar las coordenadas: " + error.message);
+            });
         }
 
-        async function agregarNuevoSite() {
-            const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase(); // Convertir a mayúsculas
+        // Agregar un nuevo site
+        function agregarNuevoSite() {
+            const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase();
             const nuevasCoordenadas = document.getElementById("nuevasCoordenadas").value;
 
             if (nuevaCadena.length === 0 || nuevasCoordenadas.length === 0) {
@@ -102,32 +192,26 @@
                 return;
             }
 
-            const docRef = doc(db, "sites/emplazamiento", nuevaCadena);
-            const docSnap = await getDoc(docRef);
-
-            if (docSnap.exists()) {
-                alert('La cadena ya existe en la base de datos');
-                return;
-            }
-
-            try {
-                await addDoc(collection(db, "sites/emplazamiento"), {
-                    sites: nuevaCadena,
-                    coordenadas: nuevasCoordenadas
-                });
-                alert("Nuevo site agregado con éxito.");
-
-                // Limpiar los campos después de agregar
-                document.getElementById("nuevaCadena").value = "";
-                document.getElementById("nuevasCoordenadas").value = "";
-                document.getElementById("nuevoSiteContainer").style.display = "none"; // Ocultar formulario
-            } catch (error) {
-                console.error("Error al agregar el site: ", error);
-                alert("Error al agregar el site: " + error.message);
-            }
+            const siteRef = firebase.database().ref('datos/emplazamiento/' + nuevaCadena);
+            siteRef.once('value').then((snapshot) => {
+                if (snapshot.exists()) {
+                    alert('La cadena ya existe en la base de datos');
+                } else {
+                    siteRef.set({
+                        coordenadas: nuevasCoordenadas,
+                        sites: nuevaCadena // Agregamos el campo "sites"
+                    }).then(() => {
+                        alert("Nuevo site agregado con éxito.");
+                        document.getElementById("nuevaCadena").value = "";
+                        document.getElementById("nuevasCoordenadas").value = "";
+                    }).catch((error) => {
+                        alert("Error al guardar el site: " + error.message);
+                    });
+                }
+            });
         }
 
-        async function eliminarSite() {
+        function eliminarSite() {
             const siteAEliminar = document.getElementById("siteAEliminar").value.toUpperCase();
 
             if (siteAEliminar.length === 0) {
@@ -135,21 +219,19 @@
                 return;
             }
 
-            const docRef = doc(db, "sites/emplazamiento", siteAEliminar);
-            const docSnap = await getDoc(docRef);
-
-            if (docSnap.exists()) {
-                try {
-                    await deleteDoc(docRef);
-                    alert(`Site ${siteAEliminar} eliminado con éxito.`);
-                    document.getElementById("siteAEliminar").value = ""; // Limpiar el campo
-                } catch (error) {
-                    console.error("Error al eliminar el site: ", error);
-                    alert("Error al eliminar el site: " + error.message);
+            firebase.database().ref('datos/emplazamiento/' + siteAEliminar).once('value').then((snapshot) => {
+                if (snapshot.exists()) {
+                    firebase.database().ref('datos/emplazamiento/' + siteAEliminar).remove()
+                    .then(() => {
+                        alert(`Site ${siteAEliminar} eliminado con éxito.`);
+                        document.getElementById("siteAEliminar").value = "";
+                    });
+                } else {
+                    alert("No se encontró el site para eliminar.");
                 }
-            } else {
-                alert("No se encontró el site para eliminar.");
-            }
+            }).catch((error) => {
+                alert("Error al eliminar el site: " + error.message);
+            });
         }
 
         function abrirMapa() {
@@ -157,71 +239,49 @@
             if (coordenadas) {
                 const lat = coordenadas[0];
                 const lng = coordenadas[1];
-                const url = `https://www.google.com/maps?q=${lat},${lng}`;
-                window.open(url, '_blank');
+                window.open(`https://www.google.com/maps?q=${lat},${lng}`);
             }
-        }
-
-        function procesarExcel() {
-            const fileInput = document.getElementById('inputExcel');
-            const file = fileInput.files[0];
-
-            if (!file) {
-                alert('Por favor, seleccione un archivo WRITE.');
-                return;
-            }
-
-            const reader = new FileReader();
-
-            // Mostrar mensaje de carga
-            document.getElementById('loadingMessage').style.display = 'block';
-
-            reader.onload = async function (e) {
-                const data = new Uint8Array(e.target.result);
-                const workbook = XLSX.read(data, { type: 'array' });
-                const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
-                const jsonData = XLSX.utils.sheet_to_json(firstSheet, { header: 1 });
-
-                let validData = true;
-                for (const row of jsonData.slice(1)) {
-                    const site = row[0];
-                    const coordenadas = row[1];
-
-                    if (!site || !coordenadas) {
-                        validData = false; // Marca como inválido si hay datos faltantes
-                    } else {
-                        try {
-                            await addDoc(collection(db, "sites/emplazamiento"), {
-                                sites: site.toUpperCase(),
-                                coordenadas: coordenadas
-                            });
-                        } catch (error) {
-                            console.error("Error al agregar el site desde Excel: ", error);
-                            alert("Error al agregar el site desde Excel: " + error.message);
-                        }
-                    }
-                }
-
-                // Ocultar mensaje de carga
-                document.getElementById('loadingMessage').style.display = 'none';
-
-                if (!validData) {
-                    alert('Algunos datos en el archivo son inválidos. Asegúrate de que todas las filas tengan un site y coordenadas.');
-                    return;
-                }
-
-                document.getElementById('successMessage').style.display = 'block';
-                document.getElementById('refreshButton').style.display = 'inline-block';
-                document.getElementById('excelContainer').style.display = 'none';
-            };
-
-            reader.readAsArrayBuffer(file);
         }
 
         function refreshPage() {
             location.reload();
         }
+
+        // Procesar archivo de Excel (si es necesario)
+        function procesarExcel() {
+            const fileInput = document.getElementById('inputExcel');
+            const file = fileInput.files[0];
+
+            if (!file) {
+                alert('Por favor, seleccione un archivo.');
+                return;
+            }
+
+            const reader = new FileReader();
+            reader.onload = function(event) {
+                const data = new Uint8Array(event.target.result);
+                const workbook = XLSX.read(data, {type: 'array'});
+                const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
+                const jsonData = XLSX.utils.sheet_to_json(firstSheet);
+
+                jsonData.forEach(row => {
+                    const siteName = row['site'];
+                    const coordinates = row['coordenadas'];
+                    if (siteName && coordinates) {
+                        firebase.database().ref('datos/emplazamiento/' + siteName).set({
+                            coordenadas: coordinates,
+                            sites: siteName
+                        });
+                    }
+                });
+
+                document.getElementById('successMessage').style.display = 'block';
+            };
+
+            reader.readAsArrayBuffer(file);
+        }
     </script>
 
 </body>
 </html>
+
